# flutter_action

./: Makefile  pubspec.yaml
.github/workflows/: test.yml
ios/: .gitignore
ios/Runner/: AppDelegate.swift  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_definitions.dart  bridge_generated.dart  main.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
src_rust/: Cargo.toml
src_rust/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  lib.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
